--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>US Healthcare Claims Portal</title>
+  <title>AI Innovator Challange</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
