--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2>US Healthcare – Claims Eligibility Portal</h2>
+<h2>AI Innovator Challenge</h2>
 
 <form id="claimForm">
   <label>Member ID:</label>
