--- a/index.html
+++ b/index.html
@@ -1,88 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>CitiusCare Healthcare Portal</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="header">
-    <div class="container header-content">
-      <img src="https://cdn-icons-png.flaticon.com/512/2966/2966327.png" class="logo" alt="CitiusCare Logo" />
-      <h1>CitiusCare Healthcare POC</h1>
-    </div>
-  </header>
-
-  <!-- LIVE TEXT MARQUEE -->
-  <div class="marquee">
-    <marquee behavior="scroll" direction="left">
-      ➤ Real-time Claim Submission&nbsp;&nbsp;|&nbsp;&nbsp;AI Eligibility Check&nbsp;&nbsp;|&nbsp;&nbsp;Exception Handling&nbsp;&nbsp;|&nbsp;&nbsp;Smart Agent Decisions
-    </marquee>
+<header class="header">
+  <div class="header-content">
+    <img src="CTLogo.png" class="logo">
+    <h1>CitiusCare Healthcare POC</h1>
   </div>
+</header>
 
-  <!-- FORM (CENTERED) -->
-  <main class="main-container">
-    <section class="form-section">
-      <h2>Submit Healthcare Claim</h2>
-      <p class="subtext">Fill in details below to submit your claim</p>
+<div class="marquee">
+  <marquee>AI-Driven Claims Review | Agentic Automation | US Healthcare POC</marquee>
+</div>
 
-      <div class="form-wrapper">
+<main class="container">
+  <div class="card">
+    <h2>Submit Healthcare Claim</h2>
+    <p class="subtext">Enter claim details for AI review</p>
 
-        <div class="input-group">
-          <label>Member ID</label>
-          <input id="memberId" placeholder="M12345">
-        </div>
-
-        <div class="input-group">
-          <label>Provider NPI</label>
-          <input id="npi" placeholder="1234567890">
-        </div>
-
-        <div class="input-group">
-          <label>CPT Code</label>
-          <input id="cpt" placeholder="99213">
-        </div>
-
-        <div class="input-group">
-          <label>ICD-10 Code</label>
-          <input id="icd" placeholder="E11.9">
-        </div>
-
-        <div class="input-group large">
-          <label>Claim Amount ($)</label>
-          <input id="amount" type="number" placeholder="2500">
-        </div>
-
-        <div class="input-group large">
-          <label>Plan Type</label>
-          <select id="plan">
-            <option>Select Plan</option>
-            <option>HMO</option>
-            <option>PPO</option>
-            <option>Medicare</option>
-            <option>Medicaid</option>
-          </select>
-        </div>
-
+    <div class="form-grid">
+      <div>
+        <label>Member ID</label>
+        <input id="memberId" placeholder="M12345">
       </div>
+      <div>
+        <label>Provider NPI</label>
+        <input id="npi" placeholder="1234567890">
+      </div>
+      <div>
+        <label>CPT Code</label>
+        <input id="cpt" placeholder="99213">
+      </div>
+      <div>
+        <label>ICD-10 Code</label>
+        <input id="icd" placeholder="E11.9">
+      </div>
+      <div>
+        <label>Claim Amount ($)</label>
+        <input id="amount" type="number" placeholder="2500">
+      </div>
+      <div>
+        <label>Plan Type</label>
+        <select id="plan">
+          <option value="">Select</option>
+          <option>HMO</option>
+          <option>PPO</option>
+          <option>Medicare</option>
+          <option>Medicaid</option>
+        </select>
+      </div>
+    </div>
 
-      <button class="btn primary-btn" onclick="submitClaim()">Submit Claim</button>
-    </section>
+    <button class="primary-btn" onclick="submitClaim()">Submit Claim</button>
+  </div>
+</main>
 
-    <!-- STATUS CARD -->
-    <section id="statusCard" class="status-section hidden">
-      <span id="statusBadge"></span>
-      <p id="statusMessage"></p>
-    </section>
-  </main>
+<footer>
+  © 2026 CitiusCare | Agentic AI Proof of Concept
+</footer>
 
-  <footer>
-    <p>© 2026 CitiusCare Health Solutions</p>
-  </footer>
-
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
