--- a/success.html
+++ b/success.html
@@ -2,42 +2,37 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Submission Successful</title>
+  <title>Claim Submitted</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
 <header class="header">
-  <div class="header-content">
+  <div class="header-inner">
     <img src="CTLogo.png" class="logo">
-    <h1>CitiusCare Healthcare POC</h1>
+    <div>
+      <h1>CitiusCare</h1>
+      <span>Healthcare Agentic AI POC</span>
+    </div>
   </div>
 </header>
 
-<div class="marquee">
-  <marquee>Claim submitted successfully | AI Agent reviewing eligibility</marquee>
-</div>
-
 <main class="container">
-  <div class="card success-card">
-    <div class="success-icon">✔</div>
+  <div class="card success">
+    <div class="check">✓</div>
     <h2>Claim Submitted Successfully</h2>
-    <p>Your claim has been received and is under AI-based review.</p>
+    <p>Your claim has been sent for AI eligibility and validation review.</p>
 
-    <div class="status-box">
-      <span class="badge review">Under AI Review</span>
-      <p>Decision will be generated based on eligibility rules and historical data.</p>
-    </div>
+    <span class="status">Under AI Review</span>
 
-    <button class="secondary-btn" onclick="window.location.href='index.html'">
+    <button class="btn-secondary" onclick="window.location.href='index.html'">
       Submit Another Claim
     </button>
   </div>
 </main>
 
 <footer>
-  © 2026 CitiusCare | Agentic AI Proof of Concept
+  © 2026 CitiusTech | CitiusCare Healthcare POC
 </footer>
 
 </body>
