--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <header class="header">
   <div class="header-inner">
-    <img src="CTLogo.png" class="logo">
+    <img src="citiustech-logo.png" class="logo">
     <div>
       <h1>CitiusCare</h1>
       <span>Healthcare Agentic AI POC</span>
@@ -19,13 +19,13 @@
 </header>
 
 <div class="banner">
-  AI‑Driven Claims Processing | Eligibility Validation | Agentic Automation
+  AI-Driven Claims Processing | Eligibility Validation | Agentic Automation
 </div>
 
 <main class="container">
   <div class="card">
     <h2>Healthcare Claim Submission</h2>
-    <p class="subtext">Submit claim details for AI‑based review</p>
+    <p class="subtext">Submit claim details for AI-based review</p>
 
     <div class="grid">
       <div>
@@ -41,7 +41,7 @@
         <input id="cpt" placeholder="99213">
       </div>
       <div>
-        <label>ICD‑10 Code</label>
+        <label>ICD-10 Code</label>
         <input id="icd" placeholder="E11.9">
       </div>
       <div>
