--- a/success.html
+++ b/success.html
@@ -9,7 +9,7 @@
 
 <header class="header">
   <div class="header-inner">
-    <img src="CTLogo.png" class="logo">
+    <img src="citiustech-logo.png" class="logo">
     <div>
       <h1>CitiusCare</h1>
       <span>Healthcare Agentic AI POC</span>
