--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>CitiusCare Healthcare POC</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -18,44 +17,22 @@
   </div>
 </header>
 
-<div class="banner">
-  AI-Driven Claims Processing | Eligibility Validation | Agentic Automation
-</div>
-
 <main class="container">
   <div class="card">
     <h2>Healthcare Claim Submission</h2>
     <p class="subtext">Submit claim details for AI-based review</p>
 
     <div class="grid">
-      <div>
-        <label>Member ID</label>
-        <input id="memberId" placeholder="M12345">
-      </div>
-      <div>
-        <label>Provider NPI</label>
-        <input id="npi" placeholder="1234567890">
-      </div>
-      <div>
-        <label>CPT Code</label>
-        <input id="cpt" placeholder="99213">
-      </div>
-      <div>
-        <label>ICD-10 Code</label>
-        <input id="icd" placeholder="E11.9">
-      </div>
-      <div>
-        <label>Claim Amount ($)</label>
-        <input id="amount" type="number" placeholder="2500">
-      </div>
-      <div>
-        <label>Plan Type</label>
+      <div><label>Member ID</label><input id="memberId"></div>
+      <div><label>Provider NPI</label><input id="npi"></div>
+      <div><label>CPT Code</label><input id="cpt"></div>
+      <div><label>ICD-10 Code</label><input id="icd"></div>
+      <div><label>Claim Amount ($)</label><input id="amount" type="number"></div>
+      <div><label>Plan Type</label>
         <select id="plan">
-          <option value="">Select Plan</option>
-          <option>HMO</option>
-          <option>PPO</option>
-          <option>Medicare</option>
-          <option>Medicaid</option>
+          <option value="">Select</option>
+          <option>HMO</option><option>PPO</option>
+          <option>Medicare</option><option>Medicaid</option>
         </select>
       </div>
     </div>
@@ -64,10 +41,7 @@
   </div>
 </main>
 
-<footer>
-  © 2026 CitiusTech | CitiusCare Healthcare POC
-</footer>
-
+<footer>© 2026 CitiusTech</footer>
 <script src="script.js"></script>
 </body>
 </html>
