--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Success</title>
+  <title>CitiusCare Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,13 +12,19 @@
     <h1>CitiusCare</h1>
   </div>
 </header>
+
 <main class="container">
-  <div class="card success">
-    <h2>Claim Submitted Successfully</h2>
-    <span class="status">Under AI Review</span>
-    <button class="btn-secondary" onclick="window.location.href='index.html'">Submit Another</button>
+  <div class="card login-card">
+    <h2>Login</h2>
+    <label>User ID</label>
+    <input id="username">
+    <label>Password</label>
+    <input id="password" type="password">
+    <button class="btn-primary" onclick="login()">Login</button>
   </div>
 </main>
+
 <footer>© 2026 CitiusTech</footer>
+<script src="login.js"></script>
 </body>
 </html>
