--- a/login.html
+++ b/login.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
   <title>CitiusCare Login</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -24,7 +23,6 @@
   </div>
 </main>
 
-<footer>© 2026 CitiusTech</footer>
-<script src="login.js"></script>
+<script src="auth.js"></script>
 </body>
 </html>
